subiendo los primeros archivos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,39 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+
+  <ion-menu side="start" menuId="first" contentId="main">
+    <ion-header>
+      <ion-toolbar color="tertiary">
+        <ion-title>Menu</ion-title>
+      </ion-toolbar>
+    </ion-header>
+
+      <ion-content class="ion-padding">
+        <ion-list>
+          <ion-menu-toggle>
+            <ion-list>
+
+              <!--Recorremos la lista de elementos, para cada uno se crea un item que
+             mostrará el icono y el nombre. Al dar clic se envia al módulo seleccionado.
+             Detail sirve para hacer visible la flecha al final del item-->
+              <ion-item *ngFor="let item of elementos" [routerLink]="item.ruta" detail>
+              <ion-icon name="{{item.icono}}" slot="start"></ion-icon>
+              {{item.nombre}}
+              </ion-item>
+
+            </ion-list>
+
+          </ion-menu-toggle>
+        </ion-list>
+      </ion-content>
+    
+  
+  </ion-menu>
+
+  <ion-router-outlet id="main"></ion-router-outlet> <!-- asignamos a la etiqueta de el enrutador el id main al que hace referencia el menú (contentId) -->
+
 </ion-app>
+
+<!-- Notas 
+side: nos indica que el menú estará al inicio (lado izquierdo de la pantalla)
+menuId: id del menú, debe ser único.
+contentId: Indica cual es el contenido que se manipulará en este caso las rutas -->
