--- a/src/app/pages/inicio/inicio.page.html
+++ b/src/app/pages/inicio/inicio.page.html
@@ -27,6 +27,18 @@
 
     </ion-slide>
   </ion-slides>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <div class="centrado">
+
+    <ion-button  style="height: 70px; width: 190px" color="success" shape="round">Jugar</ion-button>
+
+  </div>
+  
 
 </ion-content>
 
