--- a/src/app/pages/nosotros/nosotros.page.scss
+++ b/src/app/pages/nosotros/nosotros.page.scss
@@ -1,4 +1,7 @@
 ion-content.background{
-    --background: url(../../../assets/img/desertP.png)  0 0/100% 100% no-repeat;
+    --background: url(../../../assets/img/desiertoMinimalistaDark.jpg)  0 0/100% 100% no-repeat;
     
 }
+.centrado{
+    text-align: center;
+  }
