--- a/src/app/mcomponentes/detalle/detalle.component.html
+++ b/src/app/mcomponentes/detalle/detalle.component.html
@@ -22,28 +22,53 @@
     <br>
     <ion-card-header>
       <ion-card-title class="warning" style="background-color: rgba(11, 14, 11, 0.849); text-align: center;"><h1>{{personajeDetalle.nombre}}</h1></ion-card-title>
-      <ion-card-subtitle><h2>Descripción</h2></ion-card-subtitle>
+      <!-- <ion-card-subtitle><h2>Descripción</h2></ion-card-subtitle> -->
       
     </ion-card-header>
+
+    <ion-card-content> 
+      <ion-card-subtitle style="text-align: center;" ><H1>Habilidades</H1></ion-card-subtitle>
+        <br>
+        <p></p>
+        <div class="centrar">
+        <ion-list lines="inset">
+          <ion-item>
+            <ion-label>PH : {{personajeDetalle.vida}}</ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-label>Velocidad : {{personajeDetalle.velocidad}} Km/h</ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-label>Armas : {{personajeDetalle.armas}}</ion-label>
+          </ion-item>
+          <ion-item>
+            <!-- <ion-thumbnail slot="start">
+              <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/thumbnail.svg" />
+            </ion-thumbnail> -->
+            <ion-label>Chaleco : {{personajeDetalle.chaleco}} puntos</ion-label>
+            
+          </ion-item>
+        </ion-list>
+      </div>
+      </ion-card-content>
   
-    <ion-card-content>
-      {{personajeDetalle.descripcion}}
-    </ion-card-content>
+
     <ion-card-content>
       
-    <ion-card-subtitle><H1>Habilidades</H1></ion-card-subtitle>
+      <ion-card-subtitle style="text-align: center;"><H1>Descripción</H1></ion-card-subtitle>
       <br>
-      <p>PH : {{personajeDetalle.vida}}</p>
-      <p>Armas : {{personajeDetalle.armas}}</p>
-      <p>Velocidad : {{personajeDetalle.velocidad}} Km/h</p>
-      <p>Chaleco : {{personajeDetalle.chaleco}} puntos</p>
+      <ion-card-subtitle ><H2>{{personajeDetalle.descripcion}}</H2></ion-card-subtitle>
+      <p></p>
+      
     </ion-card-content>
 
-    <ion-footer no-border>
+    
+
+    <ion-footer  >
       <ion-toolbar>
-        <ion-buttons slot="start">
-          <ion-button (click)="regresar()">
-            <ion-icon slot="start" name="arrow-round-back"></ion-icon>
+        <ion-buttons slot="start" >
+          <ion-button (click)="regresar()" color="primary">
+            <ion-icon slot="end" name="arrow-back"></ion-icon>
             <ion-label>Regresar</ion-label>
           </ion-button>
         </ion-buttons>
