--- a/src/app/pages/historia/historia.page.scss
+++ b/src/app/pages/historia/historia.page.scss
@@ -1,4 +1,11 @@
-ion-content.background{
-    --background: url(../../../assets/img/desertP.png)  0 0/100% 100% no-repeat;
+ion-content.backgr{
+    --background: url(../../../assets/img/desiertoMinimalistaDark.jpg)  0 0/100% 100% no-repeat;
     
+}
+.transparencia {
+    background: rgba(209, 207, 207, 0.116);
+}
+
+.centrar{
+    text-align:center;
 }
