--- a/src/app/pages/secretos/secretos.page.html
+++ b/src/app/pages/secretos/secretos.page.html
@@ -3,4 +3,18 @@
 
 <ion-content class="background">
 
+    <ion-card *ngFor="let secreto of secretos" color="light" class="transparencia" (click)="verDetalle(secreto.id)">
+        <img [src]="secreto.url1" style="height: auto; width: auto"/>
+        <ion-card-header>
+          <ion-card-title style="text-align: center;">{{secreto.nombre}}</ion-card-title>
+          <ion-card-subtitle style="text-align: center;">{{secreto.id}}</ion-card-subtitle>
+        </ion-card-header>
+      
+        <ion-card-content style=" text-align: justify;">
+          {{secreto.acertijo}}
+        </ion-card-content>
+      </ion-card>
+
+
+
 </ion-content>
