--- a/src/app/pages/secretos/secretos.page.scss
+++ b/src/app/pages/secretos/secretos.page.scss
@@ -1,4 +1,8 @@
 ion-content.background{
-    --background: url(../../../assets/img/desertP.png)  0 0/100% 100% no-repeat;
+    --background: url(../../../assets/img/desiertoMinimalistaDark.jpg)  0 0/100% 100% no-repeat;
     
+}
+
+.transparencia {
+    background: rgba(70, 61, 14, 0.849);
 }
