--- a/src/app/pages/inicio/inicio.page.html
+++ b/src/app/pages/inicio/inicio.page.html
@@ -31,8 +31,12 @@
   
   <div class="centrado">
 
-    <ion-button  style="height: 50px; width: 200px" color="success" shape="round"><h1>JUGAR </h1>
     
+      
+    <ion-button style="height: 50px; width: 200px" color="success" shape="round" href="https://mauolivas.itch.io/desert-penguin">
+      <ion-icon style="font-weight: bold;height: 50px; width: 200px;" name="game-controller-outline">
+      
+      </ion-icon>
     </ion-button>
 
   </div>
